# finance-panel-py

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/finance_panel/: __main__.py  app.py  data_loader.py  format.py  types.py
src/finance_panel/components/: chart_utils.py  data_editor.py  sidebar.py
src/finance_panel/views/: annual.py  monthly.py  range_view.py
