[project]
name = "finance-panel"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "plotly>=5.24",
    "pandas>=2.2",
]

[project.scripts]
finance-panel = "finance_panel.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_panel"]
